# thisweek

./: .env  .gitmodules  README.md  index.html  package-lock.json  package.json
.github/workflows/: build_release.yml  main.yml  pre-publish-test.yml  publish.yml
scripts/: bumpversions.js
src/: App.tsx  Globals.ts  Keyboard.ts  Keymaps.ts  constants.ts  eventEmitter.ts  main.tsx  my_types.ts  my_types_init.ts  prototypes.ts  styles.css  types.d.ts  utilities.ts  utilities.tsx
src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BasicSpeedDial.tsx  Content.tsx  GoalNoteItem.tsx  GoalNoteItemMenu.tsx  Goals.css  Goals.tsx  Header.css  Header.tsx  ItemsList.tsx  ItemsListNavBar.tsx  NewItem.tsx  Objectives.tsx  ObjectivesHeader.tsx  ObjectivesPopover.tsx  SettingAbout.tsx  SettingDisplay.tsx  SettingGeneral.tsx  SettingKeymaps.tsx  SettingsPage.tsx  SidebarNav.tsx  Target.tsx  Week.css  Week.tsx  WeekDates.tsx  WeekHeader.tsx  WeekYearHeader.tsx  YearsHeaderContent.tsx  styles.css
