[package]
name = "thisweek"
version = "0.0.10"
description = "A Weekly Task Manager with Yearly Objectives"
authors = ["Shamim Keshani <sh.keshani@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-all", "app-all", "window-unminimize", "window-minimize", "window-maximize", "window-start-dragging", "window-close", "window-unmaximize", "window-show", "window-hide", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"
thisweek-core = "0.1.1"

# [patch.crates-io]
# thisweek-core = { path = "../../thisweek_core" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
